update Inventory module